成功实现跳转

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -4,7 +4,7 @@ include $(TOPDIR)/config.mk
 BOOT_START = $(obj)start.o
 BOOT_DCD = $(obj)dcd.bin
 
-all: $(BOOT_DCD) $(BOOT_START)
+all: $(BOOT_DCD) $(BOOT_START) $(COBJS) $(SOBJS)
 
 $(BOOT_DCD): dcd.o
 	$(OBJCOPY) -O binary $< $@
